feat: using virtual threads for performance